glance: registry has been deprecated
it should be no longer built and used as it is no longer maintained
https://review.openstack.org/#/c/513390/

Change-Id: Iae4a98b82cf888a0bb3af23f944c899625ba165c

--- a/openstack/glance/glance.spec.j2
+++ b/openstack/glance/glance.spec.j2
@@ -17,7 +17,6 @@ Source0:        {{ source|basename }}
 Source1:        openstack-glance.logrotate
 Source2:        openstack-glance.conf
 Source3:        openstack-glance-api.service
-Source5:        openstack-glance-registry.service
 Source6:        openstack-glance.defaultconf
 Source7:        openstack-glance.README.config
 BuildRequires:  openstack-macros
@@ -216,24 +215,6 @@ OpenStack Swift project.
 
 This package contains the %{name} API server.
 
-%package registry
-Summary:        OpenStack Image service (Glance) - Registry
-Group:          Development/Languages/Python
-Requires:       %{name} = %{epoch}:%{version}-%{release}
-
-%description registry
-The Glance project provides a service where users can upload and discover
-data assets that are meant to be used with other services. This currently
-includes images and metadata definitions.
-Glance image services include discovering, registering, and retrieving
-virtual machine images. Glance has a RESTful API that allows querying of
-VM image metadata as well as retrieval of the actual image.
-VM images made available through Glance can be stored in a variety of
-locations from simple filesystems to object-storage systems like the
-OpenStack Swift project.
-
-This package contains the %{name} Registry server.
-
 %prep
 %autosetup -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
@@ -246,7 +227,7 @@ PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/htm
 rm -rf doc/build/html/.{doctrees,buildinfo}
 %endif
 # regenerate the sample config files
-for service in api registry scrubber cache manage image-import; do
+for service in api scrubber cache manage image-import; do
     PYTHONPATH=. oslo-config-generator --config-file etc/oslo-config-generator/glance-$service.conf
 done
 
@@ -256,7 +237,6 @@ done
 install -d -m 755 %{buildroot}%{_sysconfdir}/{{ pypi_name }}
 install -d -m 755 %{buildroot}%{_sysconfdir}/glance/glance.conf.d/
 install -d -m 755 %{buildroot}%{_sysconfdir}/glance/glance-api.conf.d/
-install -d -m 755 %{buildroot}%{_sysconfdir}/glance/glance-registry.conf.d/
 install -d -m 755 %{buildroot}%{_localstatedir}/lib/{{ pypi_name }}
 install -d -m 755 %{buildroot}%{_localstatedir}/lib/{{ pypi_name }}/images
 install -d -m 750 %{buildroot}%{_localstatedir}/log/{{ pypi_name }}
@@ -266,7 +246,7 @@ install -d -m 700 %{buildroot}%{_rundir}/{{ pypi_name }}
 install -D -m 644 %{SOURCE2} %{buildroot}/%{_tmpfilesdir}/glance.conf
 # install sample configs
 cp -pr etc/* %{buildroot}%{_sysconfdir}/{{ pypi_name }}
-for service in api registry scrubber cache manage swift image-import; do
+for service in api scrubber cache manage swift image-import; do
     mv %{buildroot}%{_sysconfdir}/{{ pypi_name }}/glance-$service.conf{.sample,}
 done
 install -p -D -m 640 %{SOURCE6} %{buildroot}%{_sysconfdir}/{{ pypi_name }}/README.config
@@ -275,13 +255,17 @@ rm -rf %{buildroot}%{_sysconfdir}/{{ pypi_name }}/oslo-config-generator
 install -D -m 640 %{SOURCE6} %{buildroot}/%{_sysconfdir}/glance/glance.conf.d/010-glance.conf
 # systemd
 install -p -D -m 444 %{SOURCE3} %{buildroot}%{_unitdir}/openstack-glance-api.service
-install -p -D -m 444 %{SOURCE5} %{buildroot}%{_unitdir}/openstack-glance-registry.service
 # logrotate
 install -p -D -m 644 %{SOURCE1} %{buildroot}%{_sysconfdir}/logrotate.d/openstack-glance
 # move metadefs
 mv %{buildroot}%{_prefix}%{_sysconfdir}/glance/metadefs/* %{buildroot}%{_sysconfdir}/glance/metadefs
 # Remove duplicate files under /usr/etc
 rm -rf %{buildroot}%{_prefix}%{_sysconfdir}/glance
+# remove non-packaged files
+rm -rf %{buildroot}%{_sysconfdir}/{{ pypi_name }}/glance-registry-paste.ini
+rm -rf %{buildroot}%{_sysconfdir}/{{ pypi_name }}/glance-registry.conf
+rm -rf %{buildroot}%{_bindir}/glance-registry
+
 
 
 %pre
@@ -308,33 +292,21 @@ OS_TEST_PATH=./glance/tests/unit PYTHONPATH=. stestr-3 run
 %postun api
 %systemd_postun_with_restart %{name}-api.service
 
-%post registry
-%systemd_post %{name}-registry.service
-
-%preun registry
-%systemd_preun %{name}-registry.service
-
-%postun registry
-%systemd_postun_with_restart %{name}-registry.service
-
 %files
 %license LICENSE
 %_tmpfilesdir/glance.conf
 %dir %attr(0750, root, glance) %{_sysconfdir}/{{ pypi_name }}
 %dir %attr(0750, root, glance) %{_sysconfdir}/glance/glance.conf.d/
 %dir %attr(0750, root, glance) %{_sysconfdir}/glance/glance-api.conf.d/
-%dir %attr(0750, root, glance) %{_sysconfdir}/glance/glance-registry.conf.d/
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/glance/glance.conf.d/010-glance.conf
 %{_sysconfdir}/{{ pypi_name }}/README.config
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-api.conf
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-cache.conf
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-image-import.conf
-%config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-registry.conf
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-scrubber.conf
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-swift.conf
 %config(noreplace) %attr(0640, root, glance) %{_sysconfdir}/{{ pypi_name }}/glance-manage.conf
 %config %{_sysconfdir}/{{ pypi_name }}/glance-api-paste.ini
-%config %{_sysconfdir}/{{ pypi_name }}/glance-registry-paste.ini
 %config %{_sysconfdir}/{{ pypi_name }}/policy.json
 %config %{_sysconfdir}/{{ pypi_name }}/property-protections-policies.conf.sample
 %config %{_sysconfdir}/{{ pypi_name }}/property-protections-roles.conf.sample
@@ -378,10 +350,5 @@ OS_TEST_PATH=./glance/tests/unit PYTHONPATH=. stestr-3 run
 %{_unitdir}/openstack-glance-api.service
 %{_bindir}/{{ pypi_name }}-api
 %{_bindir}/{{ pypi_name }}-wsgi-api
-
-%files registry
-%defattr(-,root,root,-)
-%{_unitdir}/openstack-glance-registry.service
-%{_bindir}/{{ pypi_name }}-registry
 
 %changelog
