--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'mistral' %}
-{% set upstream_version = upstream_version('7.0.0.0b1') %}
+{% set upstream_version = upstream_version('8.0.0.0b1') %}
 {% set source = url_pypi() %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
@@ -35,12 +35,14 @@ BuildRequires:  {{ py2pkg('kazoo') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
 BuildRequires:  {{ py2pkg('keystonemiddleware') }}
 BuildRequires:  {{ py2pkg('python-magnumclient') }}
+BuildRequires:  {{ py2pkg('python-manilaclient') }}
 BuildRequires:  {{ py2pkg('mistral-lib') }}
 BuildRequires:  {{ py2pkg('python-mistralclient') }}
 BuildRequires:  {{ py2pkg('python-muranoclient') }}
 BuildRequires:  {{ py2pkg('python-neutronclient') }}
 BuildRequires:  {{ py2pkg('nose') }}
 BuildRequires:  {{ py2pkg('python-novaclient') }}
+BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.db') }}
@@ -54,10 +56,12 @@ BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('osprofiler') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
+BuildRequires:  {{ py2pkg('python-qinlingclient') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('python-senlinclient') }}
 BuildRequires:  {{ py2pkg('six') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('python-swiftclient') }}
 BuildRequires:  {{ py2pkg('python-tackerclient') }}
@@ -67,7 +71,9 @@ BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('tooz') }}
 BuildRequires:  {{ py2pkg('python-troveclient') }}
 BuildRequires:  {{ py2pkg('unittest2') }}
+BuildRequires:  {{ py2pkg('python-vitrageclient') }}
 BuildRequires:  {{ py2pkg('python-zaqarclient') }}
+BuildRequires:  {{ py2pkg('python-zunclient') }}
 Requires:       python-mistral = %{version}-%{release}
 BuildArch:      noarch
 %if 0%{?suse_version}
@@ -124,6 +130,7 @@ Requires:       {{ py2pkg('jsonschema') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('keystonemiddleware') }}
 Requires:       {{ py2pkg('python-magnumclient') }}
+Requires:       {{ py2pkg('python-manilaclient') }}
 Requires:       {{ py2pkg('mistral-lib') }}
 Requires:       {{ py2pkg('python-mistralclient') }}
 Requires:       {{ py2pkg('mock') }}
@@ -145,6 +152,7 @@ Requires:       {{ py2pkg('osprofiler') }}
 Requires:       {{ py2pkg('paramiko') }}
 Requires:       {{ py2pkg('pbr') }}
 Requires:       {{ py2pkg('pecan') }}
+Requires:       {{ py2pkg('python-qinlingclient') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('retrying') }}
 Requires:       {{ py2pkg('python-senlinclient') }}
@@ -155,9 +163,11 @@ Requires:       {{ py2pkg('python-swiftclient') }}
 Requires:       {{ py2pkg('python-tackerclient') }}
 Requires:       {{ py2pkg('tooz') }}
 Requires:       {{ py2pkg('python-troveclient') }}
+Requires:       {{ py2pkg('python-vitrageclient') }}
 Requires:       {{ py2pkg('yaql') }}
 Requires:       {{ py2pkg('zake') }}
 Requires:       {{ py2pkg('python-zaqarclient') }}
+Requires:       {{ py2pkg('python-zunclient') }}
 
 %description -n python-{{ pypi_name }}
 Mistral is a workflow service.
@@ -201,8 +211,8 @@ which the API servers will use.
 %else
 %autosetup -p1 -n {{ pypi_name }}-{{upstream_version}}
 %endif
+
 %py_req_cleanup
-sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
@@ -210,7 +220,7 @@ export PYTHONPATH="."
 oslo-config-generator --config-file tools/config/config-generator.mistral.conf \
 --output-file etc/mistral.conf.sample
 
-%{__python2} setup.py build_sphinx -b html
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
@@ -235,7 +245,7 @@ chmod +x %{buildroot}%{_bindir}/mistral*
 %openstack_pre_user_group_create mistral mistral
 
 %check
-%{__python2} setup.py test
+%{__python2} -m stestr.cli run
 
 %post api
 %systemd_post openstack-mistral-api.service
