--- a/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
+++ b/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
@@ -19,15 +19,18 @@ BuildRequires:  {{ py2pkg('oslo.log', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pyOpenSSL', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('tenacity', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testresources', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('netaddr') }}
+Requires:       {{ py2pkg('neutron-lib') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
+Requires:       {{ py2pkg('oslo.service') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('pyOpenSSL') }}
 Requires:       {{ py2pkg('six') }}
@@ -35,8 +38,6 @@ Requires:       {{ py2pkg('tenacity') }}
 BuildArch:      noarch
 %ifpython2
 Requires:       {{ py2pkg('enum34') }}
-Requires:       {{ py2pkg('neutron-lib') }}
-Requires:       {{ py2pkg('oslo.service') }}
 %endif
 %python_subpackages
 
