ovsdbapp: fix runtime requires
These are new dependencies that need to be pulled in

Change-Id: I159e7b9401078c8c8835c9c955f760e68558d9b4

--- a/openstack/ovsdbapp/ovsdbapp.spec.j2
+++ b/openstack/ovsdbapp/ovsdbapp.spec.j2
@@ -21,8 +21,10 @@ BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('fixtures') }}
+Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('ovs') }}
 Requires:       {{ py2pkg('pbr') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
