account for the newly added keystone-status CLI
See https://review.openstack.org/#/c/608785/

Change-Id: Iaaf92fd6c0ba55ef67c90f2e992c292ece701d54

--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -239,6 +239,7 @@ stestr-3 run --black-regex keystone.tests.unit.test_policy.GeneratePolicyFileTes
 %{_bindir}/keystone-wsgi-admin
 %{_bindir}/keystone-wsgi-public
 %{_bindir}/keystone-manage
+%{_bindir}/keystone-status
 %_tmpfilesdir/keystone.conf
 %dir %{_datadir}/keystone
 %attr(0644, root, keystone) %{_datadir}/keystone/policy.v3cloudsample.json
