account for the newly added cinder-status CLI
See https://review.openstack.org/#/c/610581/

Change-Id: Ia625e3a5204f368d272efd256ef8d175a8ab7c34

--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -353,6 +353,7 @@ exit 0
 %{_bindir}/{{ pypi_name }}-rootwrap
 %{_bindir}/{{ pypi_name }}-rtstool
 %{_bindir}/{{ pypi_name }}-volume-usage-audit
+%{_bindir}/{{ pypi_name }}-status
 
 %files -n python-cinder
 %defattr(-,root,root,-)
