package the added wsgi script
added a new file
https://review.openstack.org/#/c/611792/

Change-Id: Ifb8eec99c3111d76e5d11c64c24d5692c0adbe5e

--- a/openstack/cyborg/cyborg.spec.j2
+++ b/openstack/cyborg/cyborg.spec.j2
@@ -148,6 +148,7 @@ install -p -D -m 640 etc/cyborg/policy.json.sample %{buildroot}%{_sysconfdir}/cy
 %{_bindir}/cyborg-conductor
 %{_bindir}/cyborg-dbsync
 %{_bindir}/cyborg-agent
+%{_bindir}/{{pypi_name}}-wsgi-api
 %dir %attr(0750, root, cyborg) %{_sysconfdir}/cyborg/
 %dir %attr(0750, root, cyborg) %{_sysconfdir}/cyborg/rootwrap.d/
 %config(noreplace) %attr(0640, root, cyborg) %{_sysconfdir}/cyborg/cyborg.conf
