Use basename filter for vmware-nsxlib
There is no tag for what is currently in its pike stable branch in git
and no release on pypi.

renderspec fetch_source and obs service download_files have different
caching behaviour and both are in use. So stable URLs like
vmware-nsx-stable-pike.tar.gz with changing content will not work. The
CI will not update the file that is used to build but the version in the
rendered spec is updated.

Change-Id: I344e45bb147aa5ccbce214a8ef4441e934375cc4

--- a/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
+++ b/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
@@ -10,7 +10,7 @@ Summary:        VMware NSX python library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/vmware-nsxlib
-Source0:        {{ source }}
+Source0:        {{ source|basename }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('neutron-lib') }}
