--- a/openstack/futurist/futurist.spec.j2
+++ b/openstack/futurist/futurist.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'futurist' %}
-{% set upstream_version = upstream_version('1.7.0') %}
+{% set upstream_version = upstream_version('1.8.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -24,9 +24,8 @@ BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PrettyTable') }}
 Requires:       {{ py2pkg('monotonic') }}
 Requires:       {{ py2pkg('six') }}
@@ -49,17 +48,13 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %{python_build}
 
 # generate html docs
-%{__python2} setup.py build_sphinx
-# remove the sphinx-build leftovers
-rm -rf html/.{doctrees,buildinfo}
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 
 %install
 %{python_install}
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %doc doc/build/html README.rst
