--- a/openstack/oslo.privsep/oslo.privsep.spec.j2
+++ b/openstack/oslo.privsep/oslo.privsep.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.privsep' %}
-{% set upstream_version = upstream_version('1.29.0') %}
+{% set upstream_version = upstream_version('1.30.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -27,7 +27,7 @@ BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('cffi') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('greenlet') }}
@@ -84,8 +84,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative privsep-helper
 
 %check
-%{python_expand rm -rf .testrepository
-PYTHONPATH=. PYTHON=$python $python setup.py testr
+%{python_expand export PYTHONPATH=.
+$python  -m stestr.cli run
 }
 
 %files %{python_files}
