--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.serialization' %}
-{% set upstream_version = upstream_version('2.27.0') %}
+{% set upstream_version = upstream_version('2.28.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -21,7 +21,7 @@ BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('msgpack') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('pytz') }}
@@ -45,6 +45,7 @@ This package contains the documentation.
 
 %prep
 %autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
+sed -i -e "s,bandit.*,," test-requirements.txt
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
@@ -60,9 +61,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{python_install}
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py test
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
