--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.vmware' %}
-{% set upstream_version = upstream_version('2.31.0') %}
+{% set upstream_version = upstream_version('2.32.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -22,6 +22,7 @@ BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mox3', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('netaddr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.concurrency', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.context', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
@@ -37,6 +38,7 @@ Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('lxml') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
+Requires:       {{ py2pkg('oslo.context') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('requests') }}
