cinder/mistral/nova: Use %_rundir macro
This fixes on SUSE builds the following rpmlint error:

E: dir-or-file-in-var-run (Badness: 10000)
A file in the package is located in /var/run. It's not permitted for packages
to install files in this directory.

Change-Id: Iaddd38ed37fa1bbd5deebbaa8a3cbd6b0b35338a

--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -272,7 +272,7 @@ install -p -D -m 440 %{SOURCE6} %{buildroot}%{_sysconfdir}/sudoers.d/%{service}
 install -p -D -m 644 %{SOURCE1} %{buildroot}%{_sysconfdir}/logrotate.d/openstack-%{service}
 
 # Install pid directory
-install -d -m 755 %{buildroot}%{_localstatedir}/run/%{service}
+install -d -m 755 %{buildroot}%{_rundir}/%{service}
 
 # Install rootwrap files in /usr/share/cinder/rootwrap
 mkdir -p %{buildroot}%{_datarootdir}/%{service}/rootwrap/
@@ -343,7 +343,7 @@ exit 0
 %config(noreplace) %{_sysconfdir}/sudoers.d/%{service}
 %{_sysconfdir}/%{service}/rootwrap.d/
 %dir %attr(0750, %{service}, root) %{_localstatedir}/log/%{service}
-%dir %attr(0755, %{service}, root) %{_localstatedir}/run/%{service}
+%dir %attr(0755, %{service}, root) %{_rundir}/%{service}
 %dir %attr(0755, %{service}, root) %{_sysconfdir}/%{service}/volumes
 %{_datarootdir}/%{service}
 %defattr(-, %{service}, %{service}, -)
