--- a/openstack/taskflow/taskflow.spec.j2
+++ b/openstack/taskflow/taskflow.spec.j2
@@ -3,7 +3,7 @@
 %global rdo 1
 %endif
 Name:           {{ py2name('taskflow') }}
-Version:        3.2.0
+Version:        3.3.1
 Release:        0
 Summary:        Taskflow structured state management library
 License:        {{ license('Apache-2.0') }}
@@ -18,7 +18,6 @@ BuildRequires:  {{ py2pkg('SQLAlchemy-Utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('alembic', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('automaton', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('cachetools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('contextlib2', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('eventlet', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fasteners', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('futurist', py_versions=['py2', 'py3']) }}
@@ -32,9 +31,11 @@ BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('psycopg2', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pydot', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pydotplus', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('redis', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('retrying', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('tenacity', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
@@ -43,7 +44,6 @@ BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('zake', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('automaton') }}
 Requires:       {{ py2pkg('cachetools') }}
-Requires:       {{ py2pkg('contextlib2') }}
 Requires:       {{ py2pkg('debtcollector') }}
 Requires:       {{ py2pkg('fasteners') }}
 Requires:       {{ py2pkg('futurist') }}
@@ -57,7 +57,9 @@ Requires:       {{ py2pkg('stevedore') }}
 Requires:       {{ py2pkg('tenacity') }}
 BuildArch:      noarch
 %ifpython2
+BuildRequires:  {{ py2pkg('contextlib2') }}
 BuildRequires:  {{ py2pkg('enum34') }}
+Requires:       {{ py2pkg('contextlib2') }}
 Requires:       {{ py2pkg('enum34') }}
 Requires:       {{ py2pkg('futures') }}
 %endif
@@ -101,9 +103,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %if ! 0%{?rdo}
 %check
-%{python_expand rm -rf .testrepository
-PYTHONPATH=. $python setup.py testr
-}
+stestr run
 %endif
 
 %files %{python_files}
