--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# Backport of https://review.openstack.org/#/c/605324/
+Patch0:         0001-Do-not-access-the-connection-s-socket-during-error-c.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('WebOb') }}
