--- a/openstack/django_openstack_auth/django_openstack_auth.spec.j2
+++ b/openstack/django_openstack_auth/django_openstack_auth.spec.j2
@@ -7,7 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/django_openstack_auth/
 Source0:        https://pypi.io/packages/source/d/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
-# https://review.openstack.org/#/c/534409/
+# Backport of https://bugs.launchpad.net/horizon/+bug/1544703
+Patch0:         0001-Use-WEBSSO_KEYSTONE_URL-for-websso-authentication.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Django') }}
 BuildRequires:  python-devel
