--- a/openstack/XStatic-Angular-Vis/XStatic-Angular-Vis.spec.j2
+++ b/openstack/XStatic-Angular-Vis/XStatic-Angular-Vis.spec.j2
@@ -1,25 +1,27 @@
-{% set js_name = 'Angular-Vis' %}
-{% set build_py_versions = ['py2', 'py3'] %}
-%global sname {{ 'XStatic-' + js_name }}
-Name:           {{ py2name('XStatic-' + js_name) }}
-Version:        4.16.0.0
-Release:        0
-Summary:        {{ js_name }} %{version} (XStatic packaging standard)
+{% set pypi_name = 'XStatic-Angular-Vis' %}
+{% set upstream_version = upstream_version('4.16.0.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
+Summary:        Angular-Vis JavaScript library (XStatic packaging standard)
 License:        {{ license('MIT') }}
 Group:          Development/Languages/Python
-URL:            https://git.openstack.org/cgit/openstack/xstatic-{{ js_name | lower }}/
-Source0:        https://files.pythonhosted.org/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
+URL:            https://git.openstack.org/cgit/openstack/xstatic-angular-vis/
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('setuptools', py_versions=build_py_versions) }}
-Requires:       {{ py2pkg('XStatic', py_versions=build_py_versions) }}
+BuildRequires:  {{ py2pkg('XStatic', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 BuildArch:      noarch
 %python_subpackages
 
 %description
-{{ js_name }} javascript library packaged for setuptools (easy_install) / pip.
+Angular-Vis JavaScript library packaged for setuptools (easy_install) / pip.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
@@ -31,7 +33,6 @@ BuildArch:      noarch
 %files %{python_files}
 %doc README.txt
 %{python_sitelib}/xstatic
-%{python_sitelib}/XStatic_{{ js_name | replace('-', '_') }}-%{version}-py?.?.egg-info
-%{python_sitelib}/XStatic_{{ js_name | replace('-', '_') }}-%{version}-py?.?-nspkg.pth
+%{python_sitelib}/XStatic*
 
 %changelog
