XStatic-Angular: Convert to singlespec
Change-Id: I87ca7a4ecccb24af7a9cdd07b2f23d79fb720fa6
(cherry picked from commit 87bf721e708ad5b9799972ed8e3b2cc34ad4d6cc)

--- a/openstack/XStatic-Angular/XStatic-Angular.spec.j2
+++ b/openstack/XStatic-Angular/XStatic-Angular.spec.j2
@@ -1,37 +1,40 @@
-%global sname XStatic-Angular
-Name:           {{ py2name('XStatic-Angular') }}
-Version:        1.5.8.0
-Release:        0
+{% set pypi_name = 'XStatic-Angular' %}
+{% set upstream_version = upstream_version('1.5.8.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Angular %{version} (XStatic packaging standard)
 License:        {{ license('MIT') }}
 Group:          Development/Languages/Python
 URL:            https://git.openstack.org/cgit/openstack/xstatic-angular/
-Source0:        https://files.pythonhosted.org/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('XStatic', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('XStatic') }}
 BuildArch:      noarch
+%python_subpackages
 
 %description
 Angular JavaScript library packaged for setuptools (easy_install) / pip.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
-%{py2_build}
+%{python_build}
 
 %install
-%{py2_install}
+%{python_install}
 
-%files
+%files %{python_files}
 %doc README.txt
-%dir %{python2_sitelib}/xstatic
-%dir %{python2_sitelib}/xstatic/pkg
-%{python2_sitelib}/xstatic/pkg/angular
-%{python2_sitelib}/XStatic_Angular-%{version}-py?.?.egg-info
-%{python2_sitelib}/XStatic_Angular-%{version}-py?.?-nspkg.pth
+%{python_sitelib}/xstatic
+%{python_sitelib}/XStatic_Angular-%{version}-py?.?.egg-info
+%{python_sitelib}/XStatic_Angular-%{version}-py?.?-nspkg.pth
 
 %changelog
