freezer-api/keystone: Add new dependencies
SQLAlchemy tests have been added in
Ia4e1117da8339fee1a6b2ea62068a104f4d82865, need to adjust buildrequires

Also update buildrequires for keystone which requires now
sphinxcontrib.seqdiag to build the documentation.

Change-Id: I8c5d78c50ad7d1fa2ffc6bae234f97304925506e

--- a/openstack/freezer-api/freezer-api.spec.j2
+++ b/openstack/freezer-api/freezer-api.spec.j2
@@ -32,6 +32,7 @@ BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.middleware') }}
 BuildRequires:  {{ py2pkg('oslo.policy') }}
 BuildRequires:  {{ py2pkg('oslo.upgradecheck') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
