--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -153,6 +153,7 @@ BuildRequires:  {{ py2pkg('passlib') }}
 BuildRequires:  {{ py2pkg('pysaml2') }}
 BuildRequires:  {{ py2pkg('python-memcached') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-seqdiag ') }}
 
 %description doc
 OpenStack Keystone documentaion.
