--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'openstackdocstheme' %}
-{% set upstream_version = upstream_version('1.24.0') %}
+{% set upstream_version = upstream_version('1.29.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -16,11 +16,18 @@ BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('dulwich', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Sphinx') }}
 Requires:       {{ py2pkg('dulwich') }}
 BuildArch:      noarch
+%if 0%{?suse_version}
+Requires(post): update-alternatives
+Requires(postun): update-alternatives
+%else
+# on RDO, update-alternatives is in chkconfig
+Requires(post): chkconfig
+Requires(postun): chkconfig
+%endif
 %python_subpackages
 
 %description
@@ -39,6 +46,14 @@ sed -i '/^hacking.*/d' test-requirements.txt
 
 %install
 %python_install
+%python_clone -a %{buildroot}%{_bindir}/docstheme-build-translated.sh
+%python_clone -a %{buildroot}%{_bindir}/docstheme-lang-display-name.py
+
+%post
+%{python_install_alternative docstheme-build-translated.sh docstheme-lang-display-name.py}
+
+%postun
+%python_uninstall_alternative docstheme-build-translated.sh
 
 %check
 %{python_expand rm -rf .testrepository
@@ -48,6 +63,10 @@ $python setup.py test
 %files %{python_files}
 %license LICENSE
 %doc README.rst
+%python_alternative %{_bindir}/docstheme-build-translated.sh
+%python_alternative %{_bindir}/docstheme-lang-display-name.py
+%exclude %{_sysconfdir}/alternatives/*.pyc
+%exclude %{_sysconfdir}/alternatives/*.pyo
 %{python_sitelib}/{{ pypi_name }}
 %{python_sitelib}/{{ pypi_name }}-*-py?.?.egg-info
 
